--- a/index.html
+++ b/index.html
@@ -243,12 +243,13 @@
                 <div class="contact-info-item">
                   <h3 class="mb-3 text-white">Say hello</h3>
                   <p class="footer-text mb-0"><a href="https://wa.me/2348071730096" target="_blank">(234)8071730096</a></p>
-                  <p><a href="mailto:churchillemmanuel59@gmail.com" target="_blank">churchillemmanuel59@gmail.com</a></p>
+                  <p><a href="mailto:chiboy.debugger@gmail.com" target="_blank">chiboy.debugger@gmail.com</a></p>
                 </div>
 
                 <ul class="social-links">
                      <li><a href="https://www.dribbble.com/deBugger" class="uil uil-dribbble" data-toggle="tooltip" data-placement="left" title="Dribbble" target="_blank"></a></li>
                      <li><a href="https://www.behance.net/deBugger360" class="uil uil-behance" data-toggle="tooltip" data-placement="left" title="Behance" target="_blank"></a></li>
+                     <li><a href="https://www.github.com/deBugger360" class="uil uil-github" data-toggle="tooltip" data-placement="left" title="Behance" target="_blank"></a></li>
 <!--                      <li><a href="https://www.instagram.com/chiboy_debugger" class="uil uil-instagram" data-toggle="tooltip" data-placement="left" title="Instagram" target="_blank"></a></li> -->
                      <li><a href="https://www.linkedin.com/in/churchill-emmanuel-130725130" class="uil uil-linkedin" data-toggle="tooltip" data-placement="left" title="LinkedIn" target="_blank"></a></li>
                 </ul>
