--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <ul class="social-links">
                      <li><a href="https://www.dribbble.com/deBugger" class="uil uil-dribbble" data-toggle="tooltip" data-placement="left" title="Dribbble" target="_blank"></a></li>
                      <li><a href="https://www.behance.net/deBugger360" class="uil uil-behance" data-toggle="tooltip" data-placement="left" title="Behance" target="_blank"></a></li>
-                     <li><a href="https://www.github.com/deBugger360" class="uil uil-github" data-toggle="tooltip" data-placement="left" title="Behance" target="_blank"></a></li>
+                     <li><a href="https://www.github.com/deBugger360" class="uil uil-github" data-toggle="tooltip" data-placement="left" title="Github" target="_blank"></a></li>
 <!--                      <li><a href="https://www.instagram.com/chiboy_debugger" class="uil uil-instagram" data-toggle="tooltip" data-placement="left" title="Instagram" target="_blank"></a></li> -->
                      <li><a href="https://www.linkedin.com/in/churchill-emmanuel-130725130" class="uil uil-linkedin" data-toggle="tooltip" data-placement="left" title="LinkedIn" target="_blank"></a></li>
                 </ul>
