--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="contact-form">
               <h2 class="mb-4">Interested to work together? Let's talk</h2>
 
-              <form action="#" method="post">
+<!--               <form action="#" method="post">
                 <div class="row">
                   <div class="col-lg-6 col-12">
                     <input type="text" class="form-control" name="name" placeholder="Your Name" id="name">
@@ -272,11 +272,11 @@
 
                   <div class="col-12">
                     <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message"></textarea>
-                  </div>
+                  </div> -->
 
-                  <div class="ml-lg-auto col-lg-5 col-12">
-                    <button class="form-control submit-btn">Send Message</button>
-                  </div>
+<!--                   <div class="ml-lg-auto col-lg-5 col-12"> -->
+                    <a href="mailto:churchillemmanuel59.com" class="form-control btn btn-md">Send Message</a>
+<!--                   </div> -->
                 </div>
               </form>
             </div>
