--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="contact-form">
               <h2 class="mb-4">Interested to work together? Let's talk</h2>
                 <div class="row">
-                    <div class="btn btn-md"><a href="mailto:churchillemmanuel59@gmail.com.com">Send Message</a></div>
+                    <div class="btn btn-lg btn-primary"><a href="mailto:churchillemmanuel59@gmail.com.com">Send Message</a></div>
                 </div>
             </div>
           </div>
