--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="contact-info-item">
                   <h3 class="mb-3 text-white">Say hello</h3>
                   <p class="footer-text mb-0"><a href="https://wa.me/2348071730096" target="_blank">(234)8071730096</a></p>
-                  <p><a href="mailto:chiboy.debugger@gmail.com" target="_blank">chiboy.debugger@gmail.com</a></p>
+                  <p><a href="mailto:churchillemmanuel59@gmail.com" target="_blank">chiboy.debugger@gmail.com</a></p>
                 </div>
 
                 <ul class="social-links">
@@ -260,7 +260,7 @@
             <div class="contact-form">
               <h2 class="mb-4">Interested to work together? Let's talk</h2>
                 <div class="row">
-                    <div class="btn btn-lg btn-primary"><a href="mailto:churchillemmanuel59@gmail.com.com">Send Message</a></div>
+                    <div class="btn btn-lg btn-default"><a href="mailto:churchillemmanuel59@gmail.com.com">Send Message</a></div>
                 </div>
             </div>
           </div>
