--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="contact-info-item">
                   <h3 class="mb-3 text-white">Say hello</h3>
                   <p class="footer-text mb-0"><a href="https://wa.me/2348071730096" target="_blank">(234)8071730096</a></p>
-                  <p><a href="mailto:churchillemmanuel59@gmail.com" target="_blank">chiboy.debugger@gmail.com</a></p>
+                  <p><a href="mailto:churchillemmanuel59@gmail.com" target="_blank">churchillemmanuel59@gmail.com</a></p>
                 </div>
 
                 <ul class="social-links">
