--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <span class="mr-2">Hello folks, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Emmanuel Churchill</span>
-                                    <span class="animated-item">Front-End Developer</span>
+                                    <span class="animated-item">Full-Stack Developer</span>
                                     <span class="animated-item">Visual Designer</span>
                                 </div>
                         </h1>
@@ -89,7 +89,7 @@
                         <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="https://drive.google.com/file/d/1qELjz7Cr_WXxk7XIKUFbuKFospd7yX59/view?usp=sharing" class="btn mr-lg-2 custom-btn" target="_blank"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="https://drive.google.com/file/d/1U-ppOI2VLbiWa3eMF5augwDP-R_6xPYr/view?usp=sharing" class="btn mr-lg-2 custom-btn" target="_blank"><i class='uil uil-file-alt'></i> Download Resume</a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
                         </div>
                     </div>
