--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <div class="col-lg-11 text-center mx-auto col-12">
 
                       <div class="col-lg-8 mx-auto">
-                        <h2>Here a some projects I designed and built.</h2>
+                        <h2>Here are few projects I designed and built.</h2>
                       </div>
 
                       <div class="owl-carousel owl-theme">
