--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
                       </div>
 
                       <div class="owl-carousel owl-theme">
+                         <div class="item">
+                          <div class="project-info">
+                           <a href="https://www.hoa.ek.gov.ng/" target="_blank">
+                            <img src="images/project/ekha-homepage.png" class="img-fluid" alt="EKHA Official Website">
+                          </a> 
+                          </div>
+                        </div>
+                        
                         <div class="item">
                           <div class="project-info">
                            <a href="https://debugger360.github.io/js-video-player/" target="_blank">
