--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@
                       </div>
 
                       <div class="owl-carousel owl-theme">
+                        <div class="item">
+                          <div class="project-info">
+                           <a href="https://www.temishive.com" target="_blank">
+                            <img src="images/project/temishive.png" class="img-fluid" alt="TemisHive">
+                          </a> 
+                          </div>
+                        </div>
                          <div class="item">
                           <div class="project-info">
                            <a href="https://www.hoa.ek.gov.ng/" target="_blank">
